# dota

./: .gitignore  1  AGENTS.md  Cargo.toml  README.md  SECURITY-AUDIT.md  SECURITY_AUDIT.md  deny.toml  llms.txt
.cargo/: audit.toml  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml
docs/: v2.0-plan.md
dotav7/: dota-v7-tchkem.patch  format.rs  hybrid.rs  migration.rs  ops.rs
dotav7-paper/: scenes.py  tchkem.tex
security_testing/: __init__.py  encrypted_secret.py  red_team_attacks.py  red_team_vault.py
src/: lib.rs  main.rs  security.rs
src/cli/: clipboard.rs  commands.rs  export.rs  mod.rs
src/crypto/: aes_gcm.rs  hybrid.rs  kdf.rs  legacy_kyber.rs  mlkem.rs  mod.rs  x25519.rs
src/tui/: app.rs  mod.rs
src/vault/: format.rs  legacy.rs  migrate.rs  migration.rs  mod.rs  ops.rs
tests/: backup_tombstone_lifecycle.rs  create_test_vault.rs  crypto_math_audit.py  env_passphrase_uniformity.rs  kdf_validation.rs  legacy_migration_feature_gate.rs  migration_backup_lifecycle.rs  red_team_crypto.rs  salt_entropy.rs  symlink_rejected_e2e.rs  tombstone_roundtrip.rs
