[package]
name = "dota"
version = "1.1.0"
edition = "2024"
authors = ["zack"]
description = "Defense of the Artifacts - Post-quantum secure secrets manager with v7 TC-HKEM (ML-KEM-768 + X25519) vaults"
license = "MIT"

[features]
# Read-only migration of legacy v1-v5 vaults (which used pre-FIPS Kyber768).
# Enabled by default so existing vaults keep upgrading on unlock. Security-
# conscious downstreams whose vaults are all v6+ can build with
# `--no-default-features` to drop the pqcrypto-kyber/pqcrypto-traits
# supply-chain surface entirely (SECURITY-AUDIT.md H4).
default = ["legacy-migration"]
legacy-migration = ["dep:pqcrypto-kyber", "dep:pqcrypto-traits"]

[dependencies]
# Cryptography - Post-quantum and classical
#
# ML-KEM-768 (FIPS 203). Exact-pinned ("=") to remove the floating-RC drift
# flagged in SECURITY-AUDIT.md H4: a caret requirement on a pre-release can pull
# a different point release on `cargo update` and silently change behavior in the
# cryptographic core. Advancing to a stable ml-kem line is deferred because it
# changes the expanded 2400-byte decapsulation-key encoding stored in the vault
# (see L3) and so requires a coordinated vault-format (v8) migration with
# cross-version round-trip tests.
ml-kem = { version = "=0.3.0-rc.0", features = ["getrandom", "zeroize"] }
# Pre-FIPS Kyber768, used only to read/migrate legacy v1-v5 vaults. Optional and
# gated behind the `legacy-migration` feature so it is absent from
# `--no-default-features` builds.
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling and utilities
anyhow = "1.0"
thiserror = "2.0"

# Clipboard. default-features = false drops the `image` crate (clipboard image
# support is unused here), shrinking the supply-chain surface. Auto-clear uses a
# std::thread timer, so no async runtime (tokio) is pulled in
# (SECURITY-AUDIT.md H1).
arboard = { version = "3.4", default-features = false }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System directories
dirs = "5.0"
tempfile = "3.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Fail-fast on panic. harden_process (mlockall + PR_SET_DUMPABLE=0 + RLIMIT_CORE=0) and the Linux page allocator (zero-on-reallocation) already prevent secret recovery from freed pages under our threat model; running drop glue during unwind would also make extern "C" fn signal_handler panic-freedom a load-bearing invariant.
